deleted div sentence

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		background-color: pink;
 	}
 	.modify_this_too{
-		color: green;
+		color: purple;
 	}
 </style>
 </head>
 <body>
-	<div class="modify_this">Modify this div with more stuff. This is the addtional sentence that I have decided to include.</div>
+	<div class="modify_this"></div>
 	<div class="modify_this_too">This is the second div, but I really prefer numeric cardinals, it would be more awesome</div>
 </body>
 </html>
